# domofomka

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.vkbot  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml  start_message.txt
src/: version.py
src/api/: app.py  config.py  routes.py
src/services/: codes.py  dadata_client.py
src/storages/: interfaces.py  redis.py
src/vkbot/: config.py  handlers.py  keyboard.py  main.py
